Added an adapter to the MainActivity, to tell the ListView what data I want displayed.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">CoderSwag</string>
+    <string name="categories">Categories</string>
+    <string name="hats">Hats</string>
+    <string name="hatsimage">hatsImage</string>
 </resources>
